--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://thienluhoan.github.io/workshop-template/"
+baseURL = "https://github.com/LeCan253/AWS_FCJ_Inter_Report"
 relativeURLs = true
 canonifyURLs = true
 
@@ -15,7 +15,7 @@ home = [ "HTML", "RSS", "JSON"]
   # Git hub repo link
   editURL = ""
   description = ""
-  author = "thienlh@thienlu.com"
+  author = "congcanh30@gmail.com"
   showVisitedLinks = true
   disableBreadcrumb = false
   disableNextPrev = false
